--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,18 @@
+language: php
+php:
+  - '7.0'
+  - '7.1'
+  - '7.2'
+  - '7.3'
+
+# Commands to be run before your environment runs.
+before_script:
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
+
+# Commands you want to run that will verify your build.
+script: phpunit tests
+
 addons:
   sonarcloud:
     organization: "forgeqc"
