--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,16 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
 
 # Commands you want to run that will verify your build.
-script: phpunit
+jobs:
+  include:
+    - stage: "Tests"
+      name: "PHP Unit testing"
+      script: phpunit
+    - stage: "Sonar"
+      name: "Analyzing with Sonarqube"
+      script: sonar-scanner
 
+# Load sonarcloud addon
 addons:
   sonarcloud:
     organization: "forgeqc"
-script:
-  # other script steps might be done before running the actual analysis
-  - sonar-scanner
