Updated project source and test directories + provided phpunit codecoverage path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,9 @@ sonar.organization=forgeqc
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set.
-sonar.sources=.
+sonar.sources=src
+sonar.tests=tests
+sonar.php.tests.reportPath=log/codeCoverage
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
