Updated unit tests and coverage report paths

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.organization=forgeqc
 # This property is optional if sonar.modules is set.
 sonar.sources=src
 sonar.tests=tests
-sonar.php.tests.reportPath=log/codeCoverage
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# Reusing PHPUnit reports
+sonar.php.coverage.reportPath=log/coverage.xml
+sonar.php.tests.reportPath=log/unit.xml
