Removed wrong parameter & typo issue

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,5 +8,5 @@ sonar.sources=src
 sonar.tests=tests
 
 # Reusing PHPUnit reports
-sonar.php.coverage.reportPath=log/coverage.xml
+sonar.php.coverage.reportPaths=log/coverage.xml
 sonar.php.tests.reportPath=log/unit.xml
