--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 # Commands to be run before your environment runs.
 before_script:
   - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+  - composer install --no-interaction --dev
 
 # Commands you want to run that will verify your build.
 jobs:
