--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
 before_script:
   - composer self-update
   - composer install --no-interaction --dev
+  - echo $SONAR_PHPUNIT_TOKEN > .env
 
 # Commands you want to run that will verify your build.
 jobs:
