--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "exclude": ["vendor/", "tests/", ".gitignore"]
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.1"
+    "phpunit/phpunit": "^8.1",
+    "vlucas/phpdotenv": "^3.4"
   }
 }
